# SAE2.04

./: manage.py  note_mdp.txt  note_venv.txt  pyproject.toml
Django/WebApp/: models.py
Django/WebProject/: settings.py  urls.py
DjangoSAE/: manage.py
DjangoSAE/WebApp/: apps.py  forms.py  models.py  urls.py  views.py
DjangoSAE/WebApp/migrations/: 0001_initial.py
DjangoSAE/WebApp/static/: main.css
DjangoSAE/WebApp/templates/capteurs/: all.jinja  edit.jinja  view.jinja
DjangoSAE/WebApp/templates/donnees/: filter.jinja  view.jinja
DjangoSAE/WebApp/templates/skeleton/: main.jinja
DjangoSAE/WebProject/: asgi.py  settings.py  urls.py  wsgi.py
MQTT/: scriptMQTT.py
