[project]
name = "SAE204"
version = "0.0.0"
description = "SAE20.04"
authors = []
dependencies = [
    "django>=5.0.6",
    "paho-mqtt>=2.1.0",
    "mysql-connector-python>=8.4.0",
    "mysqlclient>=2.2.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "None"}


[tool.pdm]
distribution = false
