[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "SAE204"
version = "0.0.0"
description = "SAE20.04"
authors = []
dependencies = [
    "django>=5.0.6",
    "paho-mqtt>=2.1.0",
    "mysql-connector-python>=8.4.0",
    "mysqlclient>=2.2.4",
    "python-dotenv>=1.0.1",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "None"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
]
